<?xml version="1.0"?>
<package format="2">
  <name>um7</name>
  <version>0.0.4</version>
  <description>The um7 package provides a C++ implementation of the CH Robotics serial protocol, and a
    corresponding ROS node for publishing standard ROS orientation topics from a UM7.
  </description>

  <maintainer email="dgmiller@ncsu.edu">Daniel Miller</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>  
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="rbirac@cox.net">Alex Brown</author>
  
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/um7</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>serial</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslint</test_depend>
</package>
